--- a/src/app/components/pet-info/pet-info.component.html
+++ b/src/app/components/pet-info/pet-info.component.html
@@ -1,3 +1,6 @@
-<p>
-  pet-info works!
-</p>
+<div class="jumbotron">
+  <div *ngIf="pet" class="container">
+      <h1>{{pet.name}}</h1>
+      <img *ngFor="let phototUrl of pet.photoUrls" class="pet-picture" alt="{{pet.name}}" src="{{phototUrl}}">
+  </div>
+</div>
