--- a/src/app/components/pet-list/pet-list.component.html
+++ b/src/app/components/pet-list/pet-list.component.html
@@ -1,8 +1,10 @@
-<div class="jumbotron text-center">
-  <h3>Welcome to Pet-Store</h3>
-  <div *ngIf="pets" class="container">
-    <a *ngFor="let pet of pets" routerLink="/pets/{{pet.id}}">
-      <img class="pet-picture" alt="{{pet.name}}" src="{{pet.photoUrls[0]}}">
-    </a>
+<h3>Welcome to Pet-Store</h3>
+<div *ngIf="pets" class="container">
+  <div *ngFor="let pet of pets" class="col-sm-4">
+    <div class="card" style="width: 18rem;">
+      <a routerLink="/pets/{{pet.id}}">
+        <img *ngIf="pet.photoUrls" class="card-img-top" alt="{{pet.name}}" src="{{pet.photoUrls[0]}}">
+      </a>
+    </div>
   </div>
 </div>
