--- a/src/app/components/pet-info/pet-info.component.html
+++ b/src/app/components/pet-info/pet-info.component.html
@@ -1,9 +1,8 @@
-<div class="jumbotron">
-  <div *ngIf="pet" class="container">
-      <h1>{{pet.name}}</h1>
-      <img *ngFor="let phototUrl of pet.photoUrls" class="pet-picture" alt="{{pet.name}}" src="{{phototUrl}}">
-      <a (click)="purchase()" class="btn btn-primary {{pet.status=='AVAILABLE' ? '' : 'disabled'}}">{{pet.status=='AVAILABLE' ? 'Purchase' : 'Sold'}}</a>
-      <a (click)="return()" class="btn btn-primary {{pet.status=='SOLD' ? '' : 'disabled'}}">Return</a>
-      <a (click)="delete()" class="btn btn-primary">Delete</a>
-  </div>
+<div *ngIf="pet" class="container">
+  <h1>Meet {{pet.name}}</h1>
+  AKA:<span *ngFor="let tag of pet.tags"> "{{tag.name}}" </span>
+  <img *ngFor="let phototUrl of pet.photoUrls" class="pet-picture" alt="{{pet.name}}" src="{{phototUrl}}">
+  <a *ngIf="pet.status=='AVAILABLE'" (click)="purchase()" class="btn btn-primary">Purchase</a>
+  <a *ngIf="pet.status=='SOLD'" (click)="return()" class="btn btn-primary">Return</a>
+  <a (click)="delete()" class="btn btn-primary">Delete</a>
 </div>
