Pet Editor create

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,9 @@
                     <a class="nav-link waves-light" routerLink="/pets" mdbWavesEffect>Pets</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link waves-light" routerLink="/add-pet" mdbWavesEffect>Add Pet</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link waves-light" routerLink="/about" mdbWavesEffect>About</a>
                 </li>
             </ul>
