--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,20 @@
-<div class="jumbotron">
-    <nav class="navbar fixed-top navbar-expand navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">{{title}}</a>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="nav navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link waves-light" routerLink="/pets" mdbWavesEffect>Pets</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link waves-light" routerLink="/add-pet" mdbWavesEffect>Add Pet</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link waves-light" routerLink="/about" mdbWavesEffect>About</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <div class="col-sm-8 col-sm-offset-2">
-        <alert></alert>
-        <router-outlet></router-outlet>
+<nav class="navbar sticky-top navbar-expand navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">{{title}}</a>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="nav navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link waves-light" routerLink="/pets" mdbWavesEffect>Pets</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link waves-light" routerLink="/add-pet" mdbWavesEffect>Add Pet</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link waves-light" routerLink="/about" mdbWavesEffect>About</a>
+            </li>
+        </ul>
     </div>
+</nav>
+<div class="col-sm-11">
+    <alert></alert>
+    <router-outlet></router-outlet>
 </div>
