--- a/src/app/components/pet-editor/pet-editor.component.html
+++ b/src/app/components/pet-editor/pet-editor.component.html
@@ -1,51 +1,53 @@
 <form (submit)="savePet();" #petForm="ngForm">
-  <div *ngIf="pet" class="form-group row">
-    <label for="inputPetId" class="col-sm-2 col-form-label">ID</label>
-    <div class="col-sm-3">
-      <input type="text" id="inputPetId" readonly class="form-control-plaintext" [value]="pet.id" name="pet.id">
-    </div>
-  </div>
-  <div class="form-group row">
-    <label for="inputCategory" class="col-sm-2 col-form-label">Category</label>
-    <div class="col-sm-6">
-      <select ngbDropdown ngbDropdownAnchor [(ngModel)]="pet.category" class="form-control col-sm-6" name="pet.category">
-        <option [ngValue]="null">
-          Please Select
-        </option>
-        <option *ngFor="let category of categories;" [ngValue]="category">
-          {{category.name}}
-        </option>
-      </select>
-    </div>
-  </div>
-  <div class="form-group row">
-    <label for="inputName" class="col-sm-2 col-form-label">Name</label>
-    <div class="col-sm-6">
-      <input type="text" id="inputName" class="form-control" placeholder="Name" [(ngModel)]="pet.name" name="pet.name" required
-        maxlength="500" #petName="ngModel">
-      <div *ngIf="petName.invalid && (petName.dirty || petName.touched)" class="alert alert-danger">
-        Provide a valid Name for the Pet
+  <div class="form-row">
+    <div *ngIf="pet" class="input-group">
+      <label for="inputPetId" class="col-sm-2 col-form-label">ID</label>
+      <div class="col-sm-3">
+        <input type="text" id="inputPetId" readonly class="form-control-plaintext" [value]="pet.id" name="pet.id">
       </div>
     </div>
-  </div>
-  <div class="form-group row">
-    <label for="inputPhotoUrl" class="col-sm-2 col-form-label">Photos</label>
-    <div class="col-sm-10">
-      <input *ngIf="pet.photoUrls.length < 5" type="text" #inputPhotoUrl id="inputPhotoUrl" class="form-control" placeholder="https://..."
-        (change)="addImageUrl(inputPhotoUrl.value)" maxlength="4000">
-      <div *ngIf="pet.photoUrls != null && pet.photoUrls.length == 0" class="alert">
-        No Photos Provided
+    <div class="input-group">
+      <label for="inputCategory" class="col-sm-2 col-form-label">Category</label>
+      <div class="col-sm-6">
+        <select ngbDropdown ngbDropdownAnchor [(ngModel)]="pet.category" class="form-control col-sm-6" name="petCategory">
+          <option [ngValue]="null">
+            Please Select
+          </option>
+          <option *ngFor="let category of categories;" [ngValue]="category">
+            {{category.name}}
+          </option>
+        </select>
       </div>
-      <img *ngFor="let photoUrl of pet.photoUrls; let i = index;" #imgPhotoUrl (click)="removeImageUrl(imgPhotoUrl.alt)" src="{{photoUrl}}"
-        alt="{{photoUrl}}" class="img-thumbnail form-thumnail">
     </div>
-  </div>
-  <div class="form-group row">
-    <label for="inputTag" class="col-sm-2 col-form-label">Tags</label>
-    <div class="col-sm-10">
-      <input *ngIf="pet.tags.length < 5" type="text" #inputTag id="inputTag" class="form-control" placeholder="tag it..." (change)="addTag(inputTag.value)"
-        maxlength="4000">
-      <span *ngFor="let tag of pet.tags; let i = index;" #spanTagName (click)="removeTag(spanTagName.textContent)" class="badge badge-primary">{{tag.name}}</span>
+    <div class="input-group">
+      <label for="inputName" class="col-sm-2 col-form-label">Name</label>
+      <div class="col-sm-6">
+        <input type="text" id="inputName" class="form-control" placeholder="Name" [(ngModel)]="pet.name" name="pet.name" required
+          maxlength="500" #petName="ngModel">
+        <div *ngIf="petName.invalid && (petName.dirty || petName.touched)" class="alert alert-danger">
+          Provide a valid Name for the Pet
+        </div>
+      </div>
+    </div>
+    <div class="input-group">
+      <label for="inputPhotoUrl" class="col-sm-2 col-form-label">Photos</label>
+      <div class="col-sm-10">
+        <input *ngIf="pet.photoUrls.length < 5" type="text" #inputPhotoUrl id="inputPhotoUrl" class="form-control" placeholder="https://..."
+          (change)="addImageUrl(inputPhotoUrl.value)" maxlength="4000">
+        <div *ngIf="pet.photoUrls != null && pet.photoUrls.length == 0" class="alert">
+          No Photos Provided
+        </div>
+        <img *ngFor="let photoUrl of pet.photoUrls; let i = index;" #imgPhotoUrl (click)="removeImageUrl(imgPhotoUrl.alt)" src="{{photoUrl}}"
+          alt="{{photoUrl}}" class="img-thumbnail form-thumnail">
+      </div>
+    </div>
+    <div class="input-group">
+      <label for="inputTag" class="col-sm-2 col-form-label">Tags</label>
+      <div class="col-sm-10">
+        <input *ngIf="pet.tags.length < 5" type="text" #inputTag id="inputTag" class="form-control" placeholder="tag it..." (change)="addTag(inputTag.value)"
+          maxlength="4000">
+        <span *ngFor="let tag of pet.tags; let i = index;" #spanTagName (click)="removeTag(spanTagName.textContent)" class="badge badge-primary">{{tag.name}}</span>
+      </div>
     </div>
   </div>
   <button type="submit" class="btn btn-primary" [disabled]="petForm.invalid || pet.photoUrls.length == 0">Submit</button>
