--- a/src/app/components/pet-editor/pet-editor.component.html
+++ b/src/app/components/pet-editor/pet-editor.component.html
@@ -9,11 +9,11 @@
     <div class="input-group">
       <label for="inputCategory" class="col-sm-2 col-form-label">Category</label>
       <div class="col-sm-6">
-        <select ngbDropdown ngbDropdownAnchor [(ngModel)]="pet.category" class="form-control col-sm-6" name="petCategory">
+        <select ngbDropdown ngbDropdownAnchor [(ngModel)]="selectedCategory" class="form-control col-sm-6" name="petCategory">
           <option [ngValue]="null">
             Please Select
           </option>
-          <option *ngFor="let category of categories;" [ngValue]="category">
+          <option *ngFor="let category of categories;" [ngValue]="category.id">
             {{category.name}}
           </option>
         </select>
