--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,9 @@
             <li class="nav-item">
                 <a class="nav-link waves-light" routerLink="/about" mdbWavesEffect>About</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link waves-light" style="cursor: pointer;" (click)="logout()" mdbWavesEffect>Logout</a>
+            </li>
         </ul>
     </div>
 </nav>
