--- a/src/app/components/pet-info/pet-info.component.html
+++ b/src/app/components/pet-info/pet-info.component.html
@@ -8,5 +8,6 @@
   </div>
   <a *ngIf="pet.status=='AVAILABLE'" (click)="purchase()" class="btn btn-primary">Purchase</a>
   <a *ngIf="pet.status=='SOLD'" (click)="return()" class="btn btn-primary">Return</a>
-  <a (click)="delete()" class="btn btn-primary">Delete</a>
+  <a *ngIf="authService.hasRole('admin')" (click)="delete()" class="btn btn-primary" >Delete</a>
+  <a *ngIf="authService.hasRole('admin')" routerLink="/edit-pet/{{pet.id}}" class="btn btn-primary">Edit</a>
 </div>
