--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,10 @@
                 <a class="nav-link waves-light" routerLink="/about" mdbWavesEffect>About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link waves-light" style="cursor: pointer;" (click)="logout()" mdbWavesEffect>Logout</a>
+                <a *ngIf="!authService.isLoggedIn()"  class="nav-link waves-light" routerLink="/login" mdbWavesEffect>Login</a>
+            </li>
+            <li class="nav-item">
+                <a *ngIf="authService.isLoggedIn()" class="nav-link waves-light" style="cursor: pointer;" (click)="logout()" mdbWavesEffect>Logout</a>
             </li>
         </ul>
     </div>
